--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Cebourgeois.GitHub.io</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">Welcome to Cedric's homepage</h1>
+      <h2 class="project-tagline">C'est ici que vous en apprendrez plus a mon propos</h2>
     </section>
 
     <section class="main-content">
